overflow fix

--- a/public/style.scss
+++ b/public/style.scss
@@ -102,7 +102,6 @@ body {
         border: 1px solid rgba(0, 0, 0, 0.12);
         border-radius: 4px;
         max-height: 324px; /* Укажите максимальную высоту контейнера */
-        overflow: auto;
 
         &-header {
             margin-top: 10px;
@@ -138,6 +137,10 @@ body {
     padding-bottom: 7px;
     // gap: 16px;
     border-bottom: 1px solid rgba(33, 33, 33, 0.08);
+    &-overflow{
+        height: 290px;
+    overflow: auto;
+    }
     &-container1 {
         display: flex;
     }
